Deployment/kubernetes/eks/development/frontend/service-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-page
  namespace: frontend-development
  labels:
    app: service-page
spec:
  type: ClusterIP
  ports:
  - port: 80    
  selector:
   app: service-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-page
  namespace: frontend-development
spec:
  selector:
    matchLabels:
      app: service-page
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service-page
    spec:
      containers:
      - name: service-page
        image: pigeatgarlic/service-page:development

        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: ap-southeast-1a
